--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.medallia</groupId>
-	<artifactId>w2v4j</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.medallia.w2v4j</groupId>
+	<artifactId>w2v4j-core</artifactId>
+	<version>0.1</version>
 
 	<dependencies>
 		<dependency>
@@ -25,6 +25,11 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 	</dependencies>
 
